Lookup to the local references (#3013)
It preprocesses ref to generates internal refs instead
of external refs to cntt.readthedocs.org. It's crucial
for GSMA documents (PDF).

Signed-off-by: Cédric Ollivier <cedric.ollivier@orange.com>

Co-authored-by: Cédric Ollivier <cedric.ollivier@orange.com>

--- a/doc/ref_cert/tox.ini
+++ b/doc/ref_cert/tox.ini
@@ -8,7 +8,9 @@ deps =
   -chttps://opendev.org/openstack/requirements/raw/branch/stable/xena/upper-constraints.txt
   -r{toxinidir}/test-requirements.txt
 install_command = pip install {opts} {packages}
+allowlist_externals = /bin/bash
 commands =
+  bash -c 'sed -i "s|:ref:\`ref_cert/|:ref:\`|g" index.rst'
   doc8 index.rst
   sphinx-build -W -b html . build
   sphinx-build -W -b linkcheck . build
